gcc/testsuite/rust/rustc/ui/issues/issue-47377.rs
// ignore-tidy-tab
fn main() {
 	let b = "hello";
 	let _a = b + ", World!";
// { dg-error ".E0369." "" { target *-*-* } .-1 }
}

